--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,23 @@
 {
-    "name": "Page Observer",
-    "description" : "",
-    "version": "0.0",
     "manifest_version": 2,
+    "name": "Page Observer",
+    "version": "0.0",
+
+    "description" : "",
+
+    "browser_action" : {
+	"default_popup" : "popup.html"
+    },
+
+    "background" : {
+	"scripts" : ["background.js"],
+	"persistent" : false
+    },
     "content_scripts" : [
 	{
 	    "matches" : ["*://*/*"],
 	    "js" : ["content.js"]
 	}
     ],
-    "browser_action" : {
-	"default_popup" : "popup.html"
-    },
     "permissions" : ["notifications"]
 }
