--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,5 @@
 	    "js" : ["content.js"]
 	}
     ],
-    "permissions" : ["notifications"]
+    "permissions" : ["notifications", "storage"]
 }
