--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,10 @@
 	    "js" : ["content.js"]
 	}
     ],
+    "options_ui": {
+	"page": "options.html",
+	"chrome_style": false,
+	"open_in_tab" : true
+    },
     "permissions" : ["notifications", "storage"]
 }
